use another Whois service

--- a/views/records/show.tmpl
+++ b/views/records/show.tmpl
@@ -73,7 +73,7 @@ th, td {
         <dt class="bg-danger">src_ip</dt>
         <dd>
           <strong>{{$event.SrcIP}}</strong>
-          <a class="btn btn-default btn-xs" href="https://who.is/whois-ip/ip-address/{{$event.SrcIP}}" target="_blank" role="button">
+          <a class="btn btn-default btn-xs" href="http://www.whois-search.com/whois/{{$event.SrcIP}}" target="_blank" role="button">
             <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
             whois
           </a>
@@ -85,7 +85,7 @@ th, td {
         <dt class="bg-warning">dst_ip</dt>
         <dd>
           <strong>{{$event.DstIP}}</strong>
-          <a class="btn btn-default btn-xs" href="https://who.is/whois-ip/ip-address/{{$event.DstIP}}" target="_blank" role="button">
+          <a class="btn btn-default btn-xs" href="http://www.whois-search.com/whois/{{$event.DstIP}}" target="_blank" role="button">
             <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
             whois
           </a>
